# kalima-math

./: pyproject.toml
.github/workflows/: ci.yml  conformance.yml  issue-close-guard.yml
src/geometer.egg-info/: PKG-INFO  SOURCES.txt
