[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometer"
version = "0.1.0"
description = "Kalima: Mathematical Foundation for Quranic Research"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
